--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
             <div class="container">
                 <h2 class="h1">Our Features</h2>
                 <div class="feat f-left">
-                    <h2>Fast</h2>
+                    <h2 class="h2">Fast</h2>
                     <p>THis is Features THis is Features THis is Features THis is Features THis is Features THis is Features</p>
                 </div>
                 <div class="feat f-left">
-                    <h2>Secure</h2>
+                    <h2 class="h2">Secure</h2>
                     <p>THis is Features THis is Features THis is Features THis is Features THis is Features THis is Features</p>
                 </div>
                 <div class="feat f-left">
-                    <h2>cheap</h2>
+                    <h2 class="h2">cheap</h2>
                     <p>THis is Features THis is Features THis is Features THis is Features THis is Features THis is Features</p>
                 </div>
                 <div class="clear-fix"></div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="plan f-left Premium">
                     <h2>Premium</h2>
-                    <span class="price">10$</span>
+                    <span class="price">30$</span>
                     <ul>
                         <li>Disk Space 80GB</li>
                         <li>Band Width 200GB</li>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="plan f-left Ultimate">
                     <h2>Ultimate</h2>
-                    <span class="price">10$</span>
+                    <span class="price">80$</span>
                     <ul>
                         <li>Disk Space 120GB</li>
                         <li>Band Width 500GB</li>
